# SpiderPopatacus_CertRag

./: .gitignore  README.md  app.py  llm.py  parser.py  pyproject.toml  rag.py  store.py  utils.py  web_app.py
RegDocs/: Brake_assist_EN_Specifications.txt  Braking_EN_Specifications.txt  HVAC_EN_Specifications.txt  Wipe_and_wash_ENG_Specifications.txt
Regulations/: AVAS_EN_Specifications_train.txt
db/faiss_index/: index.faiss  index.pkl
raptor/raptor/: tree_builder.py  tree_retriever.py  utils.py
РЕЗУЛЬТАТ РАБОТЫ РЕШЕНИЯ НА ТЕСТОВОМ ДАТАСЕТЕ/: test_dataset_report_result.xlsx
