[tool.poetry]
name = "certrag"
version = "0.1.0"
description = ""
authors = ["CrudyLame <dopeyslimeg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.39.0"
jupyter = "^1.1.1"
docx = "^0.2.4"
reportlab = "^4.2.5"
xlsxwriter = "^3.2.0"
tiktoken = "^0.8.0"
openai = "^1.51.2"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
llama-parse = "^0.5.7"
pymupdf = "^1.24.11"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-huggingface = "^0.1.0"
langchain-openai = "^0.2.2"
faiss-cpu = "^1.9.0"
python-docx = "^1.1.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
